--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,10 @@ version: "3.6"
 
 services:
   node1:
+    container_name: node1
     image: quay.io/coreos/etcd:v3.5.9
-    volumes:
-      - node1-data:/etcd-data
+    # volumes:
+    #   - node1-data:/etcd-data
     ports:
       - "${ETCD1_PORT}:2379"
     expose:
@@ -30,9 +31,10 @@ services:
       - --auto-compaction-mode=periodic
 
   node2:
+    container_name: node2
     image: quay.io/coreos/etcd:v3.5.9
-    volumes:
-      - node2-data:/etcd-data
+    # volumes:
+    #   - node2-data:/etcd-data
     networks:
       cluster_net:
         ipv4_address: 172.16.238.101
@@ -57,9 +59,10 @@ services:
       - --auto-compaction-retention=1
       - --auto-compaction-mode=periodic
   node3:
+    container_name: node3
     image: quay.io/coreos/etcd:v3.5.9
-    volumes:
-      - node3-data:/etcd-data
+    # volumes:
+    #   - node3-data:/etcd-data
     networks:
       cluster_net:
         ipv4_address: 172.16.238.102
@@ -83,10 +86,46 @@ services:
       - --initial-cluster-token=docker-etcd
       - --auto-compaction-retention=1
       - --auto-compaction-mode=periodic
-volumes:
-  node1-data:
-  node2-data:
-  node3-data:
+  backend1:
+    container_name: backend1
+    restart: unless-stopped
+    build: backend
+    command: bash -c "cd /AttackMonitor && pnpm install && node index.js"
+    environment:
+      - PORT=${PORT}
+      - ETCD1_PORT=${ETCD1_PORT}
+      - ETCD2_PORT=${ETCD2_PORT}
+      - ETCD3_PORT=${ETCD3_PORT}
+    ports:
+      - 3001:${PORT}
+  backend2:
+    container_name: backend2
+    restart: unless-stopped
+    build: backend
+    command: bash -c "cd /AttackMonitor && pnpm install && node index.js"
+    environment:
+      - PORT=${PORT}
+      - ETCD1_PORT=${ETCD1_PORT}
+      - ETCD2_PORT=${ETCD2_PORT}
+      - ETCD3_PORT=${ETCD3_PORT}
+    ports:
+      - 3002:${PORT}
+  backend3:
+    container_name: backend3
+    restart: unless-stopped
+    build: backend
+    command: bash -c "cd /AttackMonitor && pnpm install && node index.js"
+    environment:
+      - PORT=${PORT}
+      - ETCD1_PORT=${ETCD1_PORT}
+      - ETCD2_PORT=${ETCD2_PORT}
+      - ETCD3_PORT=${ETCD3_PORT}
+    ports:
+      - 3003:${PORT}
+# volumes:
+#   node1-data:
+#   node2-data:
+#   node3-data:
 
 networks:
   cluster_net:
